--- a/BotListAPI/BotListAPI.csproj
+++ b/BotListAPI/BotListAPI.csproj
@@ -5,7 +5,7 @@
     <Authors>xXBuilderBXx</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Company>Fluxpoint Development</Company>
-    <Version>5.1</Version>
+    <Version>5.3.0</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
     <Copyright>Copyright 2019 xXBuilderBXx</Copyright>
     <RepositoryUrl>https://github.com/botblock/BotListAPI</RepositoryUrl>
@@ -16,8 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00988" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0-dev-20191226.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
