--- a/BotListAPI/BotListAPI.csproj
+++ b/BotListAPI/BotListAPI.csproj
@@ -5,14 +5,14 @@
     <Authors>Builderb</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Company>Fluxpoint Development</Company>
-    <Version>5.4</Version>
+    <Version>5.5</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
     <Copyright>Copyright 2019 Fluxpoint Development</Copyright>
     <RepositoryUrl>https://github.com/botblock/BotListAPI</RepositoryUrl>
     <PackageProjectUrl>https://fluxpoint.dev</PackageProjectUrl>
     <PackageTags>discord</PackageTags>
     <Description>A C# lib for all of the Discord bot list APIs</Description>
-    <PackageReleaseNotes>Added arcane botlist and added Bot to the start of discordbotlist.com token by default if it dosen't have it</PackageReleaseNotes>
+    <PackageReleaseNotes>Added BotListCo and GlennBotList</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
