--- a/BotListAPI/BotListAPI.csproj
+++ b/BotListAPI/BotListAPI.csproj
@@ -5,7 +5,7 @@
     <Authors>Builderb</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Company>Fluxpoint Development</Company>
-    <Version>5.5</Version>
+    <Version>5.5.2</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
     <Copyright>Copyright 2019 Fluxpoint Development</Copyright>
     <RepositoryUrl>https://github.com/botblock/BotListAPI</RepositoryUrl>
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0-dev-20191226.1" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
