--- a/BotListAPI/BotListAPI.csproj
+++ b/BotListAPI/BotListAPI.csproj
@@ -2,17 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>Builderb</Authors>
+    <Authors>Builderb (Fluxpoint Development)</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Company>Fluxpoint Development</Company>
-    <Version>5.5.3</Version>
+    <Version>5.5.4</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
-    <Copyright>Copyright 2019 Fluxpoint Development</Copyright>
+    <Copyright>Copyright 2023 Fluxpoint Development</Copyright>
     <RepositoryUrl>https://github.com/botblock/BotListAPI</RepositoryUrl>
-    <PackageProjectUrl>https://fluxpoint.dev</PackageProjectUrl>
+    <PackageProjectUrl>https://docs.fluxpoint.dev/botlistapi/</PackageProjectUrl>
     <PackageTags>discord</PackageTags>
     <Description>A C# lib for all of the Discord bot list APIs</Description>
-    <PackageReleaseNotes>Update newtonsoft to 13.0.3 and removed some lists.</PackageReleaseNotes>
+    <PackageReleaseNotes>Add docs to ListClient and package project url</PackageReleaseNotes>
+    <RootNamespace>BotListAPI</RootNamespace>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
