--- a/BotListAPI/BotListAPI.csproj
+++ b/BotListAPI/BotListAPI.csproj
@@ -5,14 +5,14 @@
     <Authors>Builderb (Fluxpoint Development)</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Company>Fluxpoint Development</Company>
-    <Version>5.5.4</Version>
+    <Version>5.5.5</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
     <Copyright>Copyright 2023 Fluxpoint Development</Copyright>
     <RepositoryUrl>https://github.com/botblock/BotListAPI</RepositoryUrl>
     <PackageProjectUrl>https://docs.fluxpoint.dev/botlistapi/</PackageProjectUrl>
     <PackageTags>discord</PackageTags>
     <Description>A C# lib for all of the Discord bot list APIs</Description>
-    <PackageReleaseNotes>Add docs to ListClient and package project url</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix bidirectional bot name#tag in user-agent header.</PackageReleaseNotes>
     <RootNamespace>BotListAPI</RootNamespace>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
